Template and staticfile view within django

--- a/Templates/index.html
+++ b/Templates/index.html
@@ -6,14 +6,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>The Mount</title>
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=ABeeZee&amp;display=swap">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Abel&amp;display=swap">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato&amp;display=swap">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans+JP&amp;display=swap">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans+KR&amp;display=swap">
-    <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
-    <link rel="stylesheet" href="assets/fonts/simple-line-icons.min.css">
+     <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'https://fonts.googleapis.com/css?family=ABeeZee&amp;display=swap' %}">
+    <link rel="stylesheet" href="{% static 'https://fonts.googleapis.com/css?family=Abel&amp;display=swap' %}">
+    <link rel="stylesheet" href="{% static 'https://fonts.googleapis.com/css?family=Lato&amp;display=swap' %}">
+    <link rel="stylesheet" href="{% static 'https://fonts.googleapis.com/css?family=Noto+Sans+JP&amp;display=swap' %}">
+    <link rel="stylesheet" href="{% static 'https://fonts.googleapis.com/css?family=Noto+Sans+KR&amp;display=swap' %}">
+    <link rel="stylesheet" href="{% static 'fonts/font-awesome.min.css' %}">
+    <link rel="stylesheet" href="{% static 'fonts/simple-line-icons.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 </head>
 <!-- assets/css/styles.css -->
