Towards #28 - Implement User Login and Logout
Added user login and logout functionality as well as user authentication on all pages. Authentication is session based and will time out after 3 hours of inactivity, can be adjusted as need be.

--- a/Templates/index.html
+++ b/Templates/index.html
@@ -27,14 +27,22 @@
             </div>
             <div class="col-12 col-md-10 col-lg-8 col-xl-6" style="margin-bottom: 40px;">
                 <div style="padding: 25px;border-radius: 15px;box-shadow: 0px 10px 20px 10px rgba(33,37,41,0.12);">
-                    <form>
+                    {% if messages %}
+                        {% for message in messages %}
+                            <div class="alert alert-{{ message.tags }} col-12 text-center">
+                                {{ message }}
+                            </div>
+                        {% endfor %}
+                    {% endif %}
+                    <form action="{% url 'home' %}" method="POST">
+                        {% csrf_token %}
                         <div class="row d-flex justify-content-sm-center justify-content-xl-center">
                             <div class="col-12 text-center" style="padding: 10px;padding-bottom: 5px;padding-top: 5px;margin-bottom: 20px;">
                                 <h1 style="font-family: ABeeZee, sans-serif;font-size: 45px;color: var(--bs-gray-700);"><i class="icon-lock" style="font-size: 75px;color: var(--bs-gray-700);"></i><br>Login<br></h1>
                             </div>
                             <div class="col-12" style="padding: 10px;padding-bottom: 5px;"><input class="form-control" type="text" name="Username" placeholder="Username" style="font-size: 20px;font-family: ABeeZee, sans-serif;border-radius: 10px;"></div>
                             <div class="col-12" style="padding: 10px;padding-top: 5px;"><input class="form-control" type="password" name="Password" placeholder="Password" style="font-size: 20px;font-family: ABeeZee, sans-serif;border-radius: 10px;"></div>
-                            <div class="col-12 text-center" style="padding: 10px;margin-top: 20px;"><a class="btn btn-primary btn-lg" role="button" style="font-family: ABeeZee, sans-serif;" href="{% url 'form' %}">Login&nbsp;<i class="fa fa-chevron-right"></i></a></div>
+                            <div class="col-12 text-center" style="padding: 10px;margin-top: 20px;"><button class="btn btn-primary btn-lg" role="button" style="font-family: ABeeZee, sans-serif;">Login&nbsp;<i class="fa fa-chevron-right"></i></button></div>
                         </div>
                     </form>
                 </div>
