Towards #28 - Display User's Name
Changed input_form.html to display the name of the account currently logged in.

--- a/Templates/input_form.html
+++ b/Templates/input_form.html
@@ -24,7 +24,7 @@
                 <div style="text-align: center;margin-top: 25px;"><img src="{% static 'img/The-Mount-Main-Logo-JPG.png' %}" width="100">
                     <p style="font-family: ABeeZee, sans-serif;font-size: 35px;"> The Mount Continuing Care<br>Incident Reporting Form</p>
                 </div>
-                <p class="text-center">You are logged in as:&nbsp;Lindsay Dickieson</p>
+                <p class="text-center">You are logged in as:&nbsp; {{ first_name }} {{ last_name }}</p>
                 <ul class="nav nav-tabs d-flex justify-content-center">
                     <li class="nav-item"><a class="nav-link active" href="#">Reporting Form</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Page 1</a></li>
