--- a/Templates/input_form.html
+++ b/Templates/input_form.html
@@ -144,30 +144,14 @@
                         </div>
                         <div style="padding: 30px;border-radius: 10px;box-shadow: 0px 5px 10px 1px rgba(33,37,41,0.2);padding-bottom: 20px;margin-top: 15px;margin-bottom: 15px;">
                             <div class="row" style="margin-top: 20px;">
-                                <div class="col-12 col-md-6 col-lg-4 col-xl-4">
-                                    <p>Falls Risk Assessment Done?</p>
+                                <div class="col-8 col-md-4 col-xl-4">
+                                    <div class="form-check"><input class="form-check-input" type="checkbox" id="formCheck-6" name="fall_risk_assessment" value="True"><label class="form-check-label" for="formCheck-6">Falls Risk Assessment Done?</label></div>
                                 </div>
-                                <div class="col-6 col-md-3 col-xl-2">
-                                    <div class="form-check"><input class="form-check-input" type="radio" id="formCheck-6" name="fall_risk_assessment" value="True"><label class="form-check-label" for="formCheck-6">Yes</label></div>
+                                <div class="col-8 col-md-4 col-xl-4">
+                                    <div class="form-check"><input class="form-check-input" type="checkbox" id="formCheck-9" name="employee_wcb_form" value="True"><label class="form-check-label" for="formCheck-9">Employee WCB Form 6 done within 6 months?</label></div>
                                 </div>
-                                <div class="col-6 col-md-3 col-xl-2">
-                                    <div class="form-check"><input class="form-check-input" type="radio" id="formCheck-7" name="fall_risk_assessment" value="False"><label class="form-check-label" for="formCheck-7">No (No for CC)</label></div>
-                                </div>
-                            </div>
-                            <div class="row" style="margin-top: 20px;">
-                                <div class="col-8 col-md-4">
-                                    <p>Employee WCB Form 6 done within 6 months?</p>
-                                </div>
-                                <div class="col-4 col-md-2">
-                                    <div class="form-check"><input class="form-check-input" type="radio" id="formCheck-9" name="employee_wcb_form" value="True"><label class="form-check-label" for="formCheck-9">Yes</label></div>
-                                    <div class="form-check"><input class="form-check-input" type="radio" id="formCheck-10" name="employee_wcb_form" value="False"><label class="form-check-label" for="formCheck-10">No</label></div>
-                                </div>
-                                <div class="col-8 col-md-4">
-                                    <p>Employer WCB form 7 done within 3 days? (Can be done online or paper)</p>
-                                </div>
-                                <div class="col-4 col-md-2">
-                                    <div class="form-check"><input class="form-check-input" type="radio" id="formCheck-11" name="empoloyer_wcb_form" value="True"><label class="form-check-label" for="formCheck-11">Yes</label></div>
-                                    <div class="form-check"><input class="form-check-input" type="radio" id="formCheck-12" name="employer_wcb_form" value="False"><label class="form-check-label" for="formCheck-12">No</label></div>
+                                <div class="col-8 col-md-4 col-xl-4">
+                                    <div class="form-check"><input class="form-check-input" type="checkbox" id="formCheck-11" name="employer_wcb_form" value="True"><label class="form-check-label" for="formCheck-11">Employer WCB form 7 done within 3 days? (Can be done online or paper)</label></div>
                                 </div>
                             </div>
                         </div>
@@ -248,34 +232,22 @@
                                 <div class="col-12">
                                     <p class="text-center" style="font-weight: bold;text-decoration: underline;font-size: 24px;">MUST BE FILLED OUT</p>
                                 </div>
-                                <div class="col-8 col-md-4 col-lg-3">
-                                    <p>Family Notified:</p>
-                                </div>
-                                <div class="col-4 col-md-2 col-lg-1">
-                                    <div class="form-check"><input class="form-check-input" type="radio" id="formCheck-37" name="family_notified" value="True"><label class="form-check-label" for="formCheck-37">Yes</label></div>
-                                    <div class="form-check"><input class="form-check-input" type="radio" id="formCheck-38" name="family_notified" value="False"><label class="form-check-label" for="formCheck-38">No</label></div>
+                                <div class="col-12 col-md-6 col-lg-4">
+                                    <div class="form-check"><input class="form-check-input" type="checkbox" id="formCheck-37" name="family_notified" value="True"><label class="form-check-label" for="formCheck-37">Family Notified</label></div>
                                 </div>
                                 <div class="col-12 col-md-6 col-lg-8">
                                     <p style="margin-bottom: 5px;">Name:</p><input class="form-control" type="text" name="family_name">
                                     <p style="margin-bottom: 5px;">Date &amp; Time:</p><input class="form-control" type="datetime-local" name="family_notification_date">
                                 </div>
-                                <div class="col-8 col-md-4 col-lg-3">
-                                    <p>Physician Notified:</p>
-                                </div>
-                                <div class="col-4 col-md-2 col-lg-1">
-                                    <div class="form-check"><input class="form-check-input" type="radio" id="formCheck-41" name="physician_notified" value="True"><label class="form-check-label" for="formCheck-41">Yes</label></div>
-                                    <div class="form-check"><input class="form-check-input" type="radio" id="formCheck-42" name="physician_notified" value="False"><label class="form-check-label" for="formCheck-42">No</label></div>
+                                <div class="col-12 col-md-6 col-lg-4">
+                                    <div class="form-check"><input class="form-check-input" type="checkbox" id="formCheck-41" name="physician_notified" value="True"><label class="form-check-label" for="formCheck-41">Physician Notified</label></div>
                                 </div>
                                 <div class="col-12 col-md-6 col-lg-8">
                                     <p style="margin-bottom: 5px;">Name:</p><input class="form-control" type="text" name="physician_name">
                                     <p style="margin-bottom: 5px;">Date &amp; Time:</p><input class="form-control" type="datetime-local" name="physician_notification_date">
                                 </div>
-                                <div class="col-8 col-md-4 col-lg-3">
-                                    <p>Supervisor Notified:</p>
-                                </div>
-                                <div class="col-4 col-md-2 col-lg-1">
-                                    <div class="form-check"><input class="form-check-input" type="radio" id="formCheck-39" name="supervisor_notified" value="True"><label class="form-check-label" for="formCheck-39">Yes</label></div>
-                                    <div class="form-check"><input class="form-check-input" type="radio" id="formCheck-40" name="supervisor_notified" value="False"><label class="form-check-label" for="formCheck-40">No</label></div>
+                                <div class="col-12 col-md-6 col-lg-4">
+                                    <div class="form-check"><input class="form-check-input" type="checkbox" id="formCheck-39" name="supervisor_notified" value="True"><label class="form-check-label" for="formCheck-39">Supervisor Notified</label></div>
                                 </div>
                                 <div class="col-12 col-md-6 col-lg-8">
                                     <p style="margin-bottom: 5px;">Name:</p><input class="form-control" type="text" name="supervisor_name">
@@ -301,26 +273,14 @@
                         </div>
                         <div style="padding: 30px;border-radius: 10px;box-shadow: 0px 5px 10px 1px rgba(33,37,41,0.2);padding-bottom: 40px;margin-top: 15px;margin-bottom: 15px;">
                             <div class="row">
-                                <div class="col-8 col-md-4 col-lg-3">
-                                    <p>Incident Documented on Chart</p>
+                                <div class="col-12 col-md-4 col-lg-4">
+                                    <div class="form-check"><input class="form-check-input" type="checkbox" id="formCheck-43" name="incident_documented_on_chart" value="True"><label class="form-check-label" for="formCheck-43">Incident Documented on Chart</label></div>
                                 </div>
-                                <div class="col-4 col-md-2 col-lg-1">
-                                    <div class="form-check"><input class="form-check-input" type="radio" id="formCheck-43" name="incident_documented_on_chart" value="True"><label class="form-check-label" for="formCheck-43">Yes</label></div>
-                                    <div class="form-check"><input class="form-check-input" type="radio" id="formCheck-44" name="incident_documented_on_chart" value="False"><label class="form-check-label" for="formCheck-44">No</label></div>
+                                <div class="col-12 col-md-4 col-lg-4">
+                                    <div class="form-check"><input class="form-check-input" type="checkbox" id="formCheck-47" name="post_incident_huddle_held" value="True"><label class="form-check-label" for="formCheck-47">Post Incident Huddle Held</label></div>
                                 </div>
-                                <div class="col-8 col-md-4 col-lg-3">
-                                    <p>Post Incident Huddle Held</p>
-                                </div>
-                                <div class="col-4 col-md-2 col-lg-1">
-                                    <div class="form-check"><input class="form-check-input" type="radio" id="formCheck-47" name="post_incident_huddle_held" value="True"><label class="form-check-label" for="formCheck-47">Yes</label></div>
-                                    <div class="form-check"><input class="form-check-input" type="radio" id="formCheck-48" name="post_incident_huddle_held" value="False"><label class="form-check-label" for="formCheck-48">No</label></div>
-                                </div>
-                                <div class="col-8 col-md-4 col-lg-3">
-                                    <p>Post Incident Huddle Documented on Chart</p>
-                                </div>
-                                <div class="col-4 col-md-2 col-lg-1">
-                                    <div class="form-check"><input class="form-check-input" type="radio" id="formCheck-45" name="post_incident_huddle_charted" value="True"><label class="form-check-label" for="formCheck-45">Yes</label></div>
-                                    <div class="form-check"><input class="form-check-input" type="radio" id="formCheck-46" name="post_incident_huddle_charted" value="False"><label class="form-check-label" for="formCheck-46">No</label></div>
+                                <div class="col-12 col-md-4 col-lg-4">
+                                    <div class="form-check"><input class="form-check-input" type="checkbox" id="formCheck-45" name="post_incident_huddle_charted" value="True"><label class="form-check-label" for="formCheck-45">Post Incident Huddle Documented on Chart</label></div>
                                 </div>
                                 <div class="col-12">
                                     <p style="color: var(--bs-red);font-style: italic;text-decoration:  underline;">SIGNATURES HERE (FORMAT/PROTOCOL TO BE DETERMINED)</p>
@@ -345,7 +305,11 @@
                                 </div>
                                 <div class="col-12"><textarea class="form-control form-control-lg" name="physician_comments"></textarea></div>
                             </div>
-                            <button type="submit">Submit</button>
+                            <div class="row" style="margin-top: 20px">
+                                <div class="col-12">
+                                  <button class="btn btn-primary btn-lg" role="button" style="font-family: ABeeZee, sans-serif;" type="submit">Submit</button>
+                                </div>
+                            </div>
                         </div>
                     </form>
                 </div>
