--- a/Templates/input_form.html
+++ b/Templates/input_form.html
@@ -260,15 +260,15 @@
                                 <div class="col-12">
                                     <p>Action or Treatment prescribed by the physician/supervisor:</p>
                                 </div>
-                                <div class="col-12"><textarea class="form-control" name="action_treatment_prescribed">{{ action_treatment_prescribed }}</textarea></div>
+                                <div class="col-12"><textarea class="form-control" name="action_treatment_prescribed">{{ report.action_treatment_prescribed.value }}</textarea></div>
                                 <div class="col-12">
                                     <p>What was the cause of the incident?</p>
                                 </div>
-                                <div class="col-12"><textarea class="form-control" name="cause_of_incident">{{ cause_of_incident }}</textarea></div>
+                                <div class="col-12"><textarea class="form-control" name="cause_of_incident">{{ report.cause_of_incident.value }}</textarea></div>
                                 <div class="col-12">
                                     <p>What would prevent similar incidents?</p>
                                 </div>
-                                <div class="col-12"><textarea class="form-control" name="prevention_of_incident">{{ prevention_of_incident }}</textarea></div>
+                                <div class="col-12"><textarea class="form-control" name="prevention_of_incident">{{ report.prevention_of_incident.value }}</textarea></div>
                             </div>
                         </div>
                         <div style="padding: 30px;border-radius: 10px;box-shadow: 0px 5px 10px 1px rgba(33,37,41,0.2);padding-bottom: 40px;margin-top: 15px;margin-bottom: 15px;">
