--- a/Templates/dashboard-export.html
+++ b/Templates/dashboard-export.html
@@ -34,11 +34,12 @@
         </nav>
     </div>
     <div class="container" style="margin-bottom: 150px;">
+    <form>
         <div style="padding: 30px;border-radius: 10px;box-shadow: 0px 5px 10px 1px rgba(33,37,41,0.2);padding-bottom: 25px;margin-top: 15px;margin-bottom: 0px;">
             <div class="row d-flex justify-content-center">
-                <div class="col-12 text-center" style="margin-bottom: 20px;"><a class="btn btn-secondary" role="button" href="{% url 'dashboard_export' %}" style="width: 80%;">&nbsp;<i class="fa fa-list-ul" style="font-size: 20px;"></i>&nbsp;Select</a></div>
-                <div class="col-12 col-sm-6 col-lg-5 text-center" style="margin-bottom: 20px;"><a class="btn btn-secondary disabled" role="button" style="width: 80%;">&nbsp;<i class="fa fa-print" style="font-size: 20px;"></i>&nbsp;Print</a></div>
-                <div class="col-12 col-sm-6 col-lg-5 text-center" style="margin-bottom: 20px;"><a class="btn btn-secondary disabled" role="button" style="width: 80%;">&nbsp;<i class="fa fa-download" style="font-size: 20px;"></i>&nbsp;Export</a></div>
+                <div class="col-12 text-center" style="margin-bottom: 20px;"><a class="btn btn-secondary" role="button" style="width: 80%;">&nbsp;<i class="fa fa-list-ul" style="font-size: 20px;"></i>&nbsp;Select</a></div>
+                <div class="col-12 col-sm-6 col-lg-5 text-center" style="margin-bottom: 20px;"><a class="btn btn-secondary" role="button" style="width: 80%;">&nbsp;<i class="fa fa-print" style="font-size: 20px;"></i>&nbsp;Print</a></div>
+                <div class="col-12 col-sm-6 col-lg-5 text-center" style="margin-bottom: 20px;"><a class="btn btn-secondary" role="button" type="submit" style="width: 80%;" href="{% url 'csv_export' %}">&nbsp;<i class="fa fa-download" style="font-size: 20px;"></i>&nbsp;Export</a></div>
             </div>
         </div>
         <div style="padding: 30px;border-radius: 10px;box-shadow: 0px 5px 10px 1px rgba(33,37,41,0.2);padding-bottom: 25px;margin-top: 15px;margin-bottom: 0px;">
@@ -48,7 +49,8 @@
                         <div class="row" style="margin-top: 10px;">
                             <div class="col-6 col-sm-4 col-xl-2" style="padding: 0px;padding-right: 10px;padding-left: 10px;padding-top: 5px;padding-bottom: 5px;"><input class="form-control" type="text" name="Residents Name" placeholder="Residents" style="border: 2px solid var(--bs-dark);text-align: center;font-size: 18px;color: #000000;"></div>
                             <div class="col-6 col-sm-4 col-xl-2" style="padding: 0px;padding-right: 10px;padding-left: 10px;padding-top: 5px;padding-bottom: 5px;">
-                                <div class="dropdown"><button class="btn btn-light dropdown-toggle" aria-expanded="false" data-bs-toggle="dropdown" type="button" style="border: 2px solid var(--bs-dark);width: 100%;font-size: 18px;">Date</button>
+                                <div class="dropdown">
+                                    <button class="btn btn-light dropdown-toggle" aria-expanded="false" data-bs-toggle="dropdown" type="button" style="border: 2px solid var(--bs-dark);width: 100%;font-size: 18px;">Date</button>
                                     <div class="dropdown-menu">
                                         <p style="margin-left: 15px;margin-right: 15px;margin-bottom: 0px;">From:</p><input class="form-control" type="date" style="margin-left: 10px;margin-right: 10px;width: 90%;">
                                         <p style="margin-left: 15px;margin-right: 15px;margin-bottom: 0px;">To:</p><input class="form-control" type="date" style="margin-left: 10px;margin-right: 10px;width: 90%;">
@@ -84,30 +86,33 @@
             </div>
         </div>
         {% for report in reports %}
-            <a style="text-decoration-line: none" href="/read_report/{{ report.id }}">
+
             <div style="padding: 30px;border-radius: 10px;box-shadow: 0px 5px 10px 1px rgba(33,37,41,0.2);padding-bottom: 40px;margin-top: 15px;margin-bottom: 0px;">
-                <div class="row">
-                    <div class="col-4" style="font-size: 18px;font-weight: bold;">
-                        <p>
-                            {% if report.residents != "" %}Residents Name: {{ report.residents }} <br/>{% endif %}
+            <div class="row">
+                <div class="col-1">
+                    <input type="checkbox" style="width: 20px;height: 20px;" id = "{{ report.id }}">
+                </div>
+                <div class="col">
+                    <div class="row">
+                        <div class="col-6" style="font-size: 18px;font-weight: bold;">
+                            <p>{% if report.residents != "" %}Residents Name: {{ report.residents }} <br/>{% endif %}
                             {% if report.staff != "" %} Staff Name: {{ report.staff }} <br/>{% endif %}
-                            {% if report.others != "" %} Others Name: {{ report.others }} <br/>{% endif %}
-                        </p>
-                    </div>
-                    <div class="col-8" style="font-size: 18px;font-weight: bold;">
-                        <p>{{ report.date_of_incident }}</p>
-                    </div>
-                    <div class="col-4">
-                        <p>Reporter Name: {{ report.name_of_writer }}</p>
-                    </div>
-                    <div class="col-8">
-                        <p>Location: {{ report.incident_location }}</p>
-                    </div>
-                    <div class="col-4">
-                        <p>Community: {{ report.community }}</p>
-                    </div>
-                    <div class="col-8">
-                        <p>Incident Type:
+                            {% if report.others != "" %} Others Name: {{ report.others }} <br/>{% endif %}</p>
+                        </div>
+                        <div class="col-6" style="font-size: 18px;font-weight: bold;">
+                            <p>{{ report.date_of_incident }}</p>
+                        </div>
+                        <div class="col-6">
+                            <p>Reporter Name: {{ report.name_of_writer }}</p>
+                        </div>
+                        <div class="col-6">
+                            <p>Community: {{ report.incident_location }}</p>
+                        </div>
+                        <div class="col-6">
+                            <p>Community: {{ report.community }}</p>
+                        </div>
+                        <div class="col-6">
+                            <p>Incident Type:
                             {% if report.near_miss %}Near Miss, {% endif %}
                             {% if report.fall %}Fall, {% endif %}
                             {% if report.medication_error %}Medication Error (
@@ -129,11 +134,13 @@
                             {% if report.death %}Death, {% endif %}
                             {% if report.other_type_of_incicent %}Other, {% endif %}
                             {% if report.staff_injury %}Staff Injury{% endif %}</p>
+                        </div>
                     </div>
                 </div>
             </div>
-        </a>
+        </div>
         {% endfor %}
+    </form>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
