--- a/Templates/input_form.html
+++ b/Templates/input_form.html
@@ -18,6 +18,20 @@
 </head>
 
 <body style="font-family: ABeeZee, sans-serif;font-size: 18px;">
+    <div style="box-shadow: 0px 0px 10px var(--bs-gray-500);padding-top: 15px;">
+        <p class="text-end" style="margin-bottom: 0px;margin-right: 35px;margin-left: 35px;"><i class="fa fa-user" style="font-size: 20px;"></i>&nbsp;{{ username }}</p>
+        <nav class="navbar navbar-light navbar-expand-md" style="padding: 15px;">
+            <div class="container-fluid"><a class="navbar-brand" href="#"><img src="{% static 'img/The-Mount-Main-Logo-JPG.png' %}" width="80"></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1" style="padding: 8px 12px;padding-right: 16px;padding-left: 16px;border-width: 2px;"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+                <div class="collapse navbar-collapse text-end d-md-flex justify-content-md-end" id="navcol-1">
+                    <ul class="navbar-nav" style="font-size: 20px;">
+                        <li class="nav-item"><a class="nav-link active" href="{% url 'form' %}">Reporting Form</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'dashboard' %}">Dashboard</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}">Logout</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </div>
     <div class="container" style="margin-bottom: 50px;">
         <div class="row d-flex justify-content-center justify-content-sm-center justify-content-xl-center">
             {% if messages %}
@@ -74,28 +88,28 @@
                                     <p>Type of Incident:</p>
                                 </div>
                                 <div class="col-6">
-                                    <div class="form-check"><input class="form-check-input" type="checkbox" id="formCheck-13" name="near_miss" value="N" {% if report.near_miss.value == True %} checked {% endif %}><label class="form-check-label" for="formCheck-13">Near Miss (1)</label></div>
+                                    <div class="form-check"><input class="form-check-input" type="checkbox" id="formCheck-13" name="near_miss" value="true" {% if report.near_miss.value == True %} checked {% endif %}><label class="form-check-label" for="formCheck-13">Near Miss (1)</label></div>
                                 </div>
                                 <div class="col-6">
-                                    <div class="form-check"><input class="form-check-input" type="checkbox" id="formCheck-20" name="fall" value="F" {% if report.fall.value == True %} checked {% endif %}><label class="form-check-label" for="formCheck-20">Fall (2)</label></div>
+                                    <div class="form-check"><input class="form-check-input" type="checkbox" id="formCheck-20" name="fall" value="true" {% if report.fall.value == True %} checked {% endif %}><label class="form-check-label" for="formCheck-20">Fall (2)</label></div>
                                 </div>
                                 <div class="col-6">
-                                    <div class="form-check"><input class="form-check-input" type="checkbox" id="formCheck-19" name="medication_error" value="M" {% if report.medication_error.value == True %} checked {% endif %}><label class="form-check-label" for="formCheck-19">Medication Error (3)</label></div>
+                                    <div class="form-check"><input class="form-check-input" type="checkbox" id="formCheck-19" name="medication_error" value="true" {% if report.medication_error.value == True %} checked {% endif %}><label class="form-check-label" for="formCheck-19">Medication Error (3)</label></div>
                                 </div>
                                 <div class="col-6">
-                                    <div class="form-check"><input class="form-check-input" type="checkbox" id="formCheck-18" name="treatment_error" value="T" {% if report.treatment_error.value == True %} checked {% endif %}><label class="form-check-label" for="formCheck-18">Treatment Error (4)</label></div>
+                                    <div class="form-check"><input class="form-check-input" type="checkbox" id="formCheck-18" name="treatment_error" value="true" {% if report.treatment_error.value == True %} checked {% endif %}><label class="form-check-label" for="formCheck-18">Treatment Error (4)</label></div>
                                 </div>
                                 <div class="col-6">
-                                    <div class="form-check"><input class="form-check-input" type="checkbox" id="formCheck-17" name="loss_of_property" value="L" {% if report.loss_of_property.value == True %} checked {% endif %}><label class="form-check-label" for="formCheck-17">Loss of Property (5)</label></div>
+                                    <div class="form-check"><input class="form-check-input" type="checkbox" id="formCheck-17" name="loss_of_property" value="true" {% if report.loss_of_property.value == True %} checked {% endif %}><label class="form-check-label" for="formCheck-17">Loss of Property (5)</label></div>
                                 </div>
                                 <div class="col-6">
-                                    <div class="form-check"><input class="form-check-input" type="checkbox" id="formCheck-16" name="death" value="D" {% if report.death.value == True %} checked {% endif %}><label class="form-check-label" for="formCheck-16">Death (6)</label></div>
+                                    <div class="form-check"><input class="form-check-input" type="checkbox" id="formCheck-16" name="death" value="true" {% if report.death.value == True %} checked {% endif %}><label class="form-check-label" for="formCheck-16">Death (6)</label></div>
                                 </div>
                                 <div class="col-6">
-                                    <div class="form-check"><input class="form-check-input" type="checkbox" id="formCheck-15" name="other_type_of_incident" value="O" {% if report.other_type_of_incident.value == True %} checked {% endif %}><label class="form-check-label" for="formCheck-15">Other (7)</label></div>
+                                    <div class="form-check"><input class="form-check-input" type="checkbox" id="formCheck-15" name="other_type_of_incident" value="true" {% if report.other_type_of_incident.value == True %} checked {% endif %}><label class="form-check-label" for="formCheck-15">Other (7)</label></div>
                                 </div>
                                 <div class="col-6">
-                                    <div class="form-check"><input class="form-check-input" type="checkbox" id="formCheck-14" name="staff_injury" value="S" {% if report.staff_injury.value == True %} checked {% endif %}><label class="form-check-label" for="formCheck-14">Staff Injury (8)</label></div>
+                                    <div class="form-check"><input class="form-check-input" type="checkbox" id="formCheck-14" name="staff_injury" value="true" {% if report.staff_injury.value == True %} checked {% endif %}><label class="form-check-label" for="formCheck-14">Staff Injury (8)</label></div>
                                 </div>
                             </div>
                         </div>
@@ -105,40 +119,40 @@
                                     <p>Fill out reason for medication error:</p>
                                 </div>
                                 <div class="col-6 col-md-4 col-lg-3" style="padding: 5px;padding-right: 12px;padding-left: 12px;">
-                                    <div class="form-check"><input class="form-check-input" type="checkbox" id="formCheck-8" name="incorrect_resident" value="IRE" {% if report.incorrect_resident.value == True %} checked {% endif %}><label class="form-check-label" for="formCheck-8">Incorrect Resident</label></div>
+                                    <div class="form-check"><input class="form-check-input" type="checkbox" id="formCheck-8" name="incorrect_resident" value="true" {% if report.incorrect_resident.value == True %} checked {% endif %}><label class="form-check-label" for="formCheck-8">Incorrect Resident</label></div>
                                 </div>
                                 <div class="col-6 col-md-4 col-lg-3" style="padding: 5px;padding-right: 12px;padding-left: 12px;">
-                                    <div class="form-check"><input class="form-check-input" type="checkbox" id="formCheck-31" name="incorrect_route" value="IRO" {% if report.incorrect_route.value == True %} checked {% endif %}><label class="form-check-label" for="formCheck-31">Incorrect Route</label></div>
+                                    <div class="form-check"><input class="form-check-input" type="checkbox" id="formCheck-31" name="incorrect_route" value="true" {% if report.incorrect_route.value == True %} checked {% endif %}><label class="form-check-label" for="formCheck-31">Incorrect Route</label></div>
                                 </div>
                                 <div class="col-6 col-md-4 col-lg-3" style="padding: 5px;padding-right: 12px;padding-left: 12px;">
-                                    <div class="form-check"><input class="form-check-input" type="checkbox" id="formCheck-30" name="incorrect_dose" value="IDO" {% if report.incorrect_dose.value == True %} checked {% endif %}><label class="form-check-label" for="formCheck-30">Incorrect Dose</label></div>
+                                    <div class="form-check"><input class="form-check-input" type="checkbox" id="formCheck-30" name="incorrect_dose" value="true" {% if report.incorrect_dose.value == True %} checked {% endif %}><label class="form-check-label" for="formCheck-30">Incorrect Dose</label></div>
                                 </div>
                                 <div class="col-6 col-md-4 col-lg-3" style="padding: 5px;padding-right: 12px;padding-left: 12px;">
-                                    <div class="form-check"><input class="form-check-input" type="checkbox" id="formCheck-29" name="incorrect_label" value="ILA" {% if report.incorrect_label.value == True %} checked {% endif %}><label class="form-check-label" for="formCheck-29">Incorrect Label</label></div>
+                                    <div class="form-check"><input class="form-check-input" type="checkbox" id="formCheck-29" name="incorrect_label" value="true" {% if report.incorrect_label.value == True %} checked {% endif %}><label class="form-check-label" for="formCheck-29">Incorrect Label</label></div>
                                 </div>
                                 <div class="col-6 col-md-4 col-lg-3" style="padding: 5px;padding-right: 12px;padding-left: 12px;">
-                                    <div class="form-check"><input class="form-check-input" type="checkbox" id="formCheck-28" name="incorrect_name" value="INA" {% if report.incorrect_name.value == True %} checked {% endif %}><label class="form-check-label" for="formCheck-28">Incorrect Name</label></div>
+                                    <div class="form-check"><input class="form-check-input" type="checkbox" id="formCheck-28" name="incorrect_name" value="true" {% if report.incorrect_name.value == True %} checked {% endif %}><label class="form-check-label" for="formCheck-28">Incorrect Name</label></div>
                                 </div>
                                 <div class="col-6 col-md-4 col-lg-3" style="padding: 5px;padding-right: 12px;padding-left: 12px;">
-                                    <div class="form-check"><input class="form-check-input" type="checkbox" id="formCheck-27" name="drug_missing" value="DMI" {% if report.drug_missing.value == True %} checked {% endif %}><label class="form-check-label" for="formCheck-27">Drug Missing</label></div>
+                                    <div class="form-check"><input class="form-check-input" type="checkbox" id="formCheck-27" name="drug_missing" value="true" {% if report.drug_missing.value == True %} checked {% endif %}><label class="form-check-label" for="formCheck-27">Drug Missing</label></div>
                                 </div>
                                 <div class="col-6 col-md-4 col-lg-3" style="padding: 5px;padding-right: 12px;padding-left: 12px;">
-                                    <div class="form-check"><input class="form-check-input" type="checkbox" id="formCheck-26" name="incorrect_time" value="ITI" {% if report.incorrect_time.value == True %} checked {% endif %}><label class="form-check-label" for="formCheck-26">Incorrect Time</label></div>
+                                    <div class="form-check"><input class="form-check-input" type="checkbox" id="formCheck-26" name="incorrect_time" value="true" {% if report.incorrect_time.value == True %} checked {% endif %}><label class="form-check-label" for="formCheck-26">Incorrect Time</label></div>
                                 </div>
                                 <div class="col-6 col-md-4 col-lg-3" style="padding: 5px;padding-right: 12px;padding-left: 12px;">
-                                    <div class="form-check"><input class="form-check-input" type="checkbox" id="formCheck-25" name="extra_dose_given" value="EDG" {% if report.extra_dose_given.value == True %} checked {% endif %}><label class="form-check-label" for="formCheck-25">Extra Dose Given</label></div>
+                                    <div class="form-check"><input class="form-check-input" type="checkbox" id="formCheck-25" name="extra_dose_given" value="true" {% if report.extra_dose_given.value == True %} checked {% endif %}><label class="form-check-label" for="formCheck-25">Extra Dose Given</label></div>
                                 </div>
                                 <div class="col-6 col-md-4 col-lg-3" style="padding: 5px;padding-right: 12px;padding-left: 12px;">
-                                    <div class="form-check"><input class="form-check-input" type="checkbox" id="formCheck-24" name="incorrect_drug" value="IDR" {% if report.incorrect_drug.value == True %} checked {% endif %}><label class="form-check-label" for="formCheck-24">Incorrect Drug</label></div>
+                                    <div class="form-check"><input class="form-check-input" type="checkbox" id="formCheck-24" name="incorrect_drug" value="true" {% if report.incorrect_drug.value == True %} checked {% endif %}><label class="form-check-label" for="formCheck-24">Incorrect Drug</label></div>
                                 </div>
                                 <div class="col-6 col-md-4 col-lg-3" style="padding: 5px;padding-right: 12px;padding-left: 12px;">
-                                    <div class="form-check"><input class="form-check-input" type="checkbox" id="formCheck-23" name="dose_omitted" value="DOM" {% if report.dose_omitted.value == True %} checked {% endif %}><label class="form-check-label" for="formCheck-23">Dose Omitted</label></div>
+                                    <div class="form-check"><input class="form-check-input" type="checkbox" id="formCheck-23" name="dose_omitted" value="true" {% if report.dose_omitted.value == True %} checked {% endif %}><label class="form-check-label" for="formCheck-23">Dose Omitted</label></div>
                                 </div>
                                 <div class="col-6 col-md-4 col-lg-3" style="padding: 5px;padding-right: 12px;padding-left: 12px;">
-                                    <div class="form-check"><input class="form-check-input" type="checkbox" id="formCheck-22" name="pharmacy_error" value="PER" {% if report.pharmacy_error.value == True %} checked {% endif %}><label class="form-check-label" for="formCheck-22">Pharmacy Error</label></div>
+                                    <div class="form-check"><input class="form-check-input" type="checkbox" id="formCheck-22" name="pharmacy_error" value="true" {% if report.pharmacy_error.value == True %} checked {% endif %}><label class="form-check-label" for="formCheck-22">Pharmacy Error</label></div>
                                 </div>
                                 <div class="col-6 col-md-4 col-lg-3" style="padding: 5px;padding-right: 12px;padding-left: 12px;">
-                                    <div class="form-check"><input class="form-check-input" type="checkbox" id="formCheck-21" name="other_medication_error" value="OME" {% if report.other_medication_error.value == True %} checked {% endif %}><label class="form-check-label" for="formCheck-21">Other</label></div>
+                                    <div class="form-check"><input class="form-check-input" type="checkbox" id="formCheck-21" name="other_medication_error" value="true" {% if report.other_medication_error.value == True %} checked {% endif %}><label class="form-check-label" for="formCheck-21">Other</label></div>
                                 </div>
                             </div>
                         </div>
